--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-nette-basepath": "~0.2.2",
-    "grunt-notify": "~0.3.1"
+    "grunt-notify": "~0.3.1",
+    "grunt-bump": "0.0.16"
   }
 }
