--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "leonardoca/nette-playground",
-	"description": "The sandbox is a pre-packaged Nette Framework project, including bootstrap from twitter and grunt support.",
+	"name": "leonardoca/nplayground",
+	"description": "Sandbox for experiments in Nette Framework, including bootstrap from twitter and bower/grunt support",
 	"homepage": "https://bitbucket.org/leonardoca/netteplayground",
 	"type": "project",
 	"license": [
