--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nplayground",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
@@ -22,7 +22,8 @@
     "grunt-bower": "~0.15.1",
     "grunt-contrib-copy": "~0.6.0",
     "time-grunt": "~1.0.0",
-    "grunt-replace": "~0.8.0"
+    "grunt-replace": "~0.8.0",
+    "grunt-conventional-changelog": "~1.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
