--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "nplayground",
   "version": "0.0.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LeonardoCA/nplayground"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
@@ -23,7 +27,8 @@
     "grunt-contrib-copy": "~0.6.0",
     "time-grunt": "~1.0.0",
     "grunt-replace": "~0.8.0",
-    "grunt-conventional-changelog": "~1.1.0"
+    "grunt-conventional-changelog": "~1.1.0",
+    "grunt-bower-task": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
