fix:: licence changed to "The Unlicensed"

--- a/bower.json
+++ b/bower.json
@@ -11,11 +11,7 @@
 		"bootstrap",
 		"forms"
 	],
-	"license": [
-		"BSD-3-Clause",
-		"GPL-2.0",
-		"GPL-3.0"
-	],
+	"license": ["Unlicence"],
 	"private": true,
 	"ignore": [
 		"**/.*",
