--- a/bower.json
+++ b/bower.json
@@ -22,12 +22,17 @@
 		"jquery-ui": "1.11.1",
 		"codemirror": "~4.6.0",
 		"bootstrap": "~3.2.0",
-		"nette.ajax.js": "master",
+		"nette.ajax.js": "~1.2.2",
 		"google-code-prettify": "~1.0.3",
 		"bootstrap-toggle": "~1.1.0",
 		"datatables": "~1.10.2",
 		"datatables-bootstrap3": "*",
 		"nette-forms": "~2.2.2"
+	},
+	"overrides": {
+		"nette.ajax.js": {
+			"main": ["nette.ajax.js", "extensions/diagnostics.dumps.ajax.js", "extensions/spinner.ajax.js"]
+		}
 	},
 	"resolutions": {
 		"datatables": "~1.10.2"
