--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -36,10 +36,9 @@ nette:
 			dsn: 'mysql:host=localhost;dbname=nplayground'
 			user: 'nplayground'
 			password: 'test1598!'
-			options:    [PDO::MYSQL_ATTR_COMPRESS = true]
 			debugger:   true
 			explain:    true
-			reflection: discovered  # nebo conventional nebo classname, výchozí je discovered
+			reflection: discovered
 			autowired:  true
 
 services:
