--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,22 @@
 	},
 	"require": {
 		"php": ">= 5.3.7",
-		"nette/nette": "@dev",
+		"nette/nette": "~2.1",
 		"dg/adminer-custom": "~1.5",
+		"dg/texy": "~2.6",
 		"kdyby/forms-replicator": "@dev",
-		"dibi/dibi": "@dev",
-		"jasir/component-tree-panel": "@dev",
-		"nextras/forms": "@dev",
+		"dibi/dibi": "~2.2",
 		"leonardoca/tools": "@dev",
-		"leonardoca/nbootstrap": "@dev"
+		"leonardoca/nbootstrap": "@dev",
+		"kdyby/translation": "~2.0",
+		"kdyby/console": "~2.3",
+		"kdyby/redis": "~3.2",
+		"kdyby/facebook": "~1.2",
+		"kdyby/google": "@dev",
+		"kdyby/github": "~0.1"
 	},
 	"require-dev": {
-		"nette/tester": "@dev"
+		"nette/tester": "~1.3"
 	},
 	"minimum-stability": "stable"
 }
