--- a/app/config/config.local.neon.example
+++ b/app/config/config.local.neon.example
@@ -3,7 +3,7 @@ nette:
 		default:
 			dsn: 'mysql:host=localhost;dbname=nplayground'
 			user: 'nplayground'
-			password: 'test1598!'
+			password: ''
 			debugger:   true
 			explain:    true
 			reflection: discovered
