--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
   fast_finish: true
   allow_failures:
   - php: hhvm
+services:
+  - redis-server
 before_install: npm install -g grunt-cli
 install: npm install
 before_script:
