--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ matrix:
   - php: hhvm
 services:
   - redis-server
-before_install: sudo npm install -g bower && sudo npm install -g grunt-cli
-install: npm install && grunt build
+before_install: npm install -g grunt-cli
+install: npm install
 before_script:
+- grunt build
 - "./.travis.redis.sh"
 - composer self-update
 - composer install --no-interaction --dev
